--- a/style.css
+++ b/style.css
@@ -95,7 +95,64 @@ h1 {
 	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-th, td {
+.container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+
+    .board {
+      margin: 0 auto;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .main-board {
+      width: 798px;
+    }
+
+    .user-board {
+      width: 504px;
+      margin-bottom: 24px;
+    }
+
+    .cell {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid black;
+    }
+
+    .t-center {
+      text-align: center;
+    }
+
+    .btn {
+      margin-top: 20px;
+      padding: 5px;
+      background-color: #d8cccc;
+      border: none;
+    }
+
+    .input-field {
+      width: 10%;
+      margin-top: 20px;
+      padding: 5px;
+    }
+
+    input:focus {
+      outline: none;
+    }
+
+    .highlight {
+      background-color: #d8cccc;
+    }
+
+/* th, td {
     border: 2.5px solid rgb(67, 142, 116);
     text-align: center;
-}
+} */
